# rnode-server

./: .cursorrules  .gitignore  404.html  CACHING_SYSTEM_PLAN.md  Cargo.toml  PLUGIN_SYSTEM_PLAN.md  QUEUE_SYSTEM_PLAN.md  README.md  STRUCTURE.html  TASK_TEMPLATE.md  WEBSOCKET_PLAN.md  hashmap.json  index.html  package-lock.json  package.json  package_express.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.mts
.github/: .env
api/: app.html  error-codes.html  http-utilities.html  index.html  openapi.html  request.html  response.html  router.html
architecture/: index.html  overview.html  promise-system.html
assets/: STRUCTURE.md.BGw129dZ.js  STRUCTURE.md.BGw129dZ.lean.js  STRUCTURE.md.oZqzIsnk.js  STRUCTURE.md.oZqzIsnk.lean.js  api_app.md.BK4JutbU.js  api_app.md.BK4JutbU.lean.js  api_app.md.Bh95xVvf.js  api_app.md.Bh95xVvf.lean.js  api_error-codes.md.5T1JeOk9.js  api_error-codes.md.5T1JeOk9.lean.js  api_error-codes.md.BES4kWco.js  api_error-codes.md.BES4kWco.lean.js  api_http-utilities.md.Cl95NeJs.js  api_http-utilities.md.Cl95NeJs.lean.js  api_http-utilities.md.hS-JKZ4G.js  api_http-utilities.md.hS-JKZ4G.lean.js  api_index.md.BjR3TrHE.js  api_index.md.BjR3TrHE.lean.js  api_index.md.CsKVPjO_.js  api_index.md.CsKVPjO_.lean.js  api_openapi.md.CGvKya33.js  api_openapi.md.CGvKya33.lean.js  api_request.md.DMbKNJgW.js  api_request.md.DMbKNJgW.lean.js  api_request.md.VSu2FjXZ.js  api_request.md.VSu2FjXZ.lean.js  api_response.md.B_OYCg3z.js  api_response.md.B_OYCg3z.lean.js  api_response.md.DynPNIjX.js  api_response.md.DynPNIjX.lean.js  api_router.md.H8zQeej9.js  api_router.md.H8zQeej9.lean.js  api_router.md.pmBSX0Aj.js  api_router.md.pmBSX0Aj.lean.js  app.IslNAngi.js  app.uNAPSGR3.js  architecture_index.md.CWJfvfSh.js  architecture_index.md.CWJfvfSh.lean.js  architecture_index.md.g1XsubrS.js  architecture_index.md.g1XsubrS.lean.js  (+108 more)
caching/: api.html  architecture.html  examples.html  index.html
crates/rnode-server/: Cargo.toml
crates/rnode-server/src/: file_operations.rs  handlers.rs  html_templates.rs  http_utils.rs  lib.rs  metrics.rs  middleware.rs  promise_utils.rs  request.rs  request_parser.rs  routes.rs  server.rs  static_files.rs  templates.rs  types.rs  utils.rs
crates/rnode-server/src/cache/: file_sync.rs  manager_sync.rs  memory_sync.rs  mod.rs  neon.rs  neon_wrappers.rs  redis_sync.rs  types.rs
crates/rnode-server/src/compression/: brotli.rs  gzip.rs  lz4.rs  mod.rs  zstd.rs
crates/rnode-server/src/file_operations/: handlers.rs  mod.rs  operations.rs  routes.rs  types.rs  utils.rs
crates/rnode-server/src/handlers/: dynamic_handler.rs  javascript_bridge.rs  middleware.rs  mod.rs  request_processor.rs  response_builder.rs  timeout_manager.rs
crates/rnode-server/src/http_utils/: batch.rs  client.rs  mod.rs  types.rs
crates/rnode-server/src/metrics/: business.rs  cache.rs  http.rs  mod.rs  system.rs  websocket.rs
crates/rnode-server/src/request_parser/: mod.rs  multipart.rs  parser.rs  types.rs
crates/rnode-server/src/static_files/: cache.rs  compression.rs  fallback.rs  handlers.rs  mod.rs  options.rs  security.rs  types.rs
crates/rnode-server/src/templates/: context.rs  engine.rs  mod.rs  neon_wrappers.rs
crates/rnode-server/src/websocket/: connections.rs  mod.rs  rooms.rs  router.rs  upgrade.rs
docs/: .nojekyll  STRUCTURE.md  index.md  metrics-examples.md
examples/: advanced-usage.html  body-handling.html  file-operations.html  index.html  middleware.html  openapi.html  playground.html
guide/: configuration.html  index.html  installation.html  quick-start.html
monitoring/: grafana-dashboard.html  index.html  metrics-examples.html  metrics.html
playground/: auth.db  generate-ssl.sh  package.json  pnpm-lock.yaml  static-demo.html  tsconfig.json  users.db
src/: index.cts  index_old.cts  load.cts
templates/: examples.html  index.html  syntax.html
test-cache/: index.json
tests/: auth.test.ts  cache.test.ts  file-operations.test.ts  helpers.ts  (+9 more)
(+230 files in other folders)
