[package]
name = "rnode-server"
version = "0.1.0"
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
mime_guess = "2.0"
infer = "0.15"
lazy_static = "1.4"
flate2 = "1.0"
brotli = "8.0.2"
httpdate = "1.0"
bytes = "1.0"
base64 = "0.22"
futures-util = "0.3"
futures = "0.3"
multer = "3.0"
urlencoding = "2.1"

