[package]
name = "rnode-server"
version = "0.1.2"
description = "High-performance Node.js server built with Rust, featuring Express-like API with advanced middleware support, authentication, and database integration"
authors = ["s00d <Virus191288@gmail.com>"]
license = "MIT"
repository = "https://github.com/s00d/rnode-server"
homepage = "https://github.com/s00d/rnode-server#readme"
documentation = "https://github.com/s00d/rnode-server#readme"
readme = "../../README.md"
keywords = ["rnode", "server", "rust", "nodejs", "express", "web-server", "http-server", "https-server", "middleware", "authentication", "database", "high-performance", "neon"]
categories = ["web-programming", "asynchronous", "api-bindings"]
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"
mime_guess = "2.0"
infer = "0.19"
flate2 = "1.0"
brotli = "8.0.2"
httpdate = "1.0"
base64 = "0.22"
futures = "0.3"
multer = "3.0"
urlencoding = "2.1"
tera = "1.20.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
globset = "0.4"
num_cpus = "1.17.0"
log = "0.4.27"
env_logger = "0.11.8"

