[package]
name = "rnode-server"
version = "0.3.0"
description = "High-performance Node.js server built with Rust, featuring Express-like API with advanced middleware support, authentication, and database integration"
authors = ["s00d <Virus191288@gmail.com>"]
license = "MIT"
repository = "https://github.com/s00d/rnode-server"
homepage = "https://github.com/s00d/rnode-server#readme"
documentation = "https://github.com/s00d/rnode-server#readme"
readme = "../../README.md"
keywords = ["rnode", "server", "rust", "nodejs", "web-server"]
categories = ["web-programming", "asynchronous", "api-bindings"]
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "1.1", features = ["futures"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
infer = "0.19"
flate2 = "1.0"
brotli = "8.0.2"
httpdate = "1.0"
base64 = "0.22"
futures = "0.3"
multer = "3.0"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tera = "1.20.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
globset = "0.4"
num_cpus = "1.17.0"
log = "0.4.27"
env_logger = "0.11.8"
prometheus = { version = "0.14", features = ["process"] }
sysinfo = "0.37"

